# sinograph-explorer

./: .gitignore  CLAUDE.md  README.md  index.html  overlay.html  package-lock.json  package.json  vite.config.js
db_src/: README.md  ids_coverage_compare.py
deploy_pi/: 44_make_val_pack.py  README.md  bench_scer_pi.py  bench_three_way.py  eval_pi_scer.py  infer_pi.py  infer_pi_chars.py  infer_pi_onnx.py  requirements_pi.txt
doc/: 00_CONTEXT_TILL_LAB2.md  01_CURRENT_CONTEXT.md  02_PROPOSAL_DRAFT.md  02_PROPOSAL_DRAFT_v2.md  03_IDEA_CONVERSATION.md  04_SINOGRAPH_PROJECT_PLAN.md  05_SINOGRAPH_CANONICAL_DB_V1_PLAN.md  06_Supplementary_Variant_Integration_v1.1.md  07_TWO_STAGE_WORKFLOW.md  08_STROKE_SOURCE_COVERAGE_PLAN.md  09_EHANJA_ONLINE_REVERSING.md  10_STAGE1_DATASET_GENERATION_PLAN.md  10_yoonkyu2.pptx  11_SINOGRAPH_CANONICAL_DB_V2_PLAN.md  12_STAGE2_TRAINING_PLAN.md  13_AUGMENT_IO_COEVOLUTION_PLAN.md  14_GENERATION_ENGINE_OPTIMIZATION.md  15_TARGETED_FINETUNE_WORKFLOW.md  16_STRUCTURE_AWARE_V3_PLAN.md  17_CANONICAL_V3_PLAN.md  18_FINAL_PRESENTATION.md  19_TRAIN_ENGINE_V3_PLAN.md  20_GPU_OPTIMIZATION_PLAN.md  20_SYNTH_GPU_OPTIMIZATION_PLAN.md  21_MISSING_CLASSES_AUDIT.md  22_TRAIN_GPU_OPTIMIZATION_PLAN.md  23_PHASE_TG1_RESULTS.md  24_DEPLOY_BLOCKERS_AND_V4_PLAN.md  25_DEPLOY_BLOCKER_REPORT_2026_04_27.md  26_PHASE1_KERAS_PORT_PLAN.md  33_DEMO.md  (+8 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: overlay.json
src-tauri/examples/: m1_gate.rs
src-tauri/src/: dict.rs  graph.rs  home.rs  lib.rs  main.rs  overlay.rs  recognize.rs  types.rs  util.rs
(+279 files in other folders)
